--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -6,5 +6,18 @@
     "Reset Password Notification": "Recupere sua senha",
     "Reset Password": "Alterar senha",
     "This password reset link will expire in :count minutes.": "Este link irá expirar em :count minutos.",
-    "You are receiving this email because we received a password reset request for your account.": "Você está recebendo este email para alterar a senha de sua conta."
+    "You are receiving this email because we received a password reset request for your account.": "Você está recebendo este email para alterar a senha de sua conta.",
+
+    "Jan": "Jan",
+    "Feb": "Fev",
+    "Mar": "Mar",
+    "Apr": "Abr",
+    "May": "Mai",
+    "Jun": "Jun",
+    "Jul": "Jul",
+    "Ago": "Ago",
+    "Sep": "Set",
+    "Oct": "Out",
+    "Nov": "Nov",
+    "Dec": "Dez"
 }
