feat(Championship): create a new champioship

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -19,5 +19,9 @@
     "Sep": "Set",
     "Oct": "Out",
     "Nov": "Nov",
-    "Dec": "Dez"
+    "Dec": "Dez",
+
+    "open_register": "Inscrições Abertas",
+    "fighting": "Chaves de Lutas",
+    "finished": "Resultados"
 }
