feat(Home): List pubic championships

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -22,6 +22,6 @@
     "Dec": "Dez",
 
     "open_register": "Inscrições Abertas",
-    "fighting": "Chaves de Lutas",
-    "finished": "Resultados"
+    "fighting": "Chaveamento",
+    "finished": "Classificação"
 }
