insert assets and lang

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -8,20 +8,28 @@
     "This password reset link will expire in :count minutes.": "Este link irá expirar em :count minutos.",
     "You are receiving this email because we received a password reset request for your account.": "Você está recebendo este email para alterar a senha de sua conta.",
 
-    "Jan": "Jan",
-    "Feb": "Fev",
-    "Mar": "Mar",
-    "Apr": "Abr",
-    "May": "Mai",
-    "Jun": "Jun",
-    "Jul": "Jul",
-    "Ago": "Ago",
-    "Sep": "Set",
-    "Oct": "Out",
-    "Nov": "Nov",
-    "Dec": "Dez",
+    "Jan": "Janeiro",
+    "Feb": "Fevereiro",
+    "Mar": "Março",
+    "Apr": "Abril",
+    "May": "Maio",
+    "Jun": "Junho",
+    "Jul": "Julho",
+    "Ago": "Agosto",
+    "Sep": "Setembro",
+    "Oct": "Outubro",
+    "Nov": "Novembro",
+    "Dec": "Dezembro",
 
     "open_register": "Inscrições Abertas",
     "fighting": "Chaveamento",
-    "finished": "Classificação"
+    "finished": "Classificação",
+
+    "Mon": "Segunda-feira",
+    "Tue": "Terça-feita",
+    "Wed": "Quarta-feira",
+    "Thu": "Quinta-feira",
+    "Fri": "Sexta-feira",
+    "Sat": "Sábado",
+    "Sun": "Domingo"
 }
